Shopping cart page request optimization

--- a/src/app/app-components/toolbar/toolbar.component.html
+++ b/src/app/app-components/toolbar/toolbar.component.html
@@ -26,8 +26,8 @@
     matTooltip="Your Shopping Cart"
     matTooltipShowDelay="1000"
   >
-    <mat-icon
-      [matBadge]="shoppingCartCount"
+    <mat-icon *ngIf="shoppingCart$ | async as cart"
+      [matBadge]="cart.getShoppingCartCount()"
       matBadgeColor="accent"
       matBadgeOverlap="true"
       aria-hidden="false"
