--- a/src/app/pages/shopping-cart/shopping-cart.component.sass
+++ b/src/app/pages/shopping-cart/shopping-cart.component.sass
@@ -1,3 +1,16 @@
 .content-right
   text-align: right
   justify-content: flex-end
+
+.content-center
+  text-align: center
+  justify-content: center
+
+.cdk-column-price
+  flex: 1 1 50px
+
+.cdk-column-count
+  flex: 0 1 200px
+
+.cdk-column-total
+  flex: 0 1 50px
