--- a/src/app/pages/shopping-cart/shopping-cart.component.sass
+++ b/src/app/pages/shopping-cart/shopping-cart.component.sass
@@ -1,3 +1,5 @@
+@use '../../styles/app-toolbar'
+
 .content-right
   text-align: right
   justify-content: flex-end
@@ -5,6 +7,17 @@
 .content-center
   text-align: center
   justify-content: center
+
+.cdk-column-image
+  flex: 0 1 70px
+
+.cdk-column-image img
+  border-radius: 25%
+  object-fit: cover
+  height: 60px
+  width: 60px
+  margin-top: 4px
+  margin-bottom: 4px
 
 .cdk-column-price
   flex: 1 1 50px
