Small design changes

--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,19 @@
 <h1>Shopping Cart</h1>
 
-<div class="mat-elevation-z8">
+<mat-toolbar class="transparent content-width">
+  <span class="filling-spacer"></span>
+  <button
+    mat-button
+    color="warn"
+    type="button"
+    [disabled]="totalCount === 0"
+    (click)="onDeleteShoppingCart()"
+  >
+    <mat-icon>delete</mat-icon> Delete
+  </button>
+</mat-toolbar>
+
+<div class="mat-elevation-z8 content-width">
   <mat-table
     [dataSource]="dataSource"
     matSort
@@ -30,17 +43,6 @@
       </mat-header-cell>
       <mat-cell *matCellDef="let row">
         {{ getCategoryName(row.category) }}
-      </mat-cell>
-      <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-    </ng-container>
-
-    <!-- Price Column -->
-    <ng-container matColumnDef="price">
-      <mat-header-cell *matHeaderCellDef mat-sort-header class="content-right">
-        Price
-      </mat-header-cell>
-      <mat-cell *matCellDef="let row" class="content-right">
-        {{ row.price | currency }}
       </mat-cell>
       <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
     </ng-container>
@@ -77,15 +79,3 @@
   </mat-table>
 </div>
 
-<mat-toolbar class="transparent">
-  <span class="filling-spacer"></span>
-  <button
-    mat-flat-button
-    color="warn"
-    type="button"
-    [disabled]="totalCount === 0"
-    (click)="onDeleteShoppingCart()"
-  >
-    <mat-icon>delete</mat-icon> Delete
-  </button>
-</mat-toolbar>
