--- a/src/app/pages/admin/admin-products/admin-products.component.html
+++ b/src/app/pages/admin/admin-products/admin-products.component.html
@@ -47,7 +47,7 @@
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row">
         <button
-          mat-button
+          mat-flat-button
           color="accent"
           [routerLink]="['/admin/product', row.id]"
         >
