Fix sorting issue with column total

--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -47,6 +47,18 @@
       <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
     </ng-container>
 
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="content-right">
+        Price
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row" class="content-right">
+        {{ row.price | currency }}
+      </mat-cell>
+      <mat-footer-cell *matFooterCellDef class="content-right">
+      </mat-footer-cell>
+    </ng-container>
+
     <!-- Count Column -->
     <ng-container matColumnDef="count">
       <mat-header-cell *matHeaderCellDef mat-sort-header class="content-center">
@@ -66,7 +78,7 @@
         Total
       </mat-header-cell>
       <mat-cell *matCellDef="let row" class="content-right">
-        {{ row.getTotal() | currency }}
+        {{ row.total | currency }}
       </mat-cell>
       <mat-footer-cell *matFooterCellDef class="content-right">
         {{ totalPrice | currency }}
@@ -78,4 +90,3 @@
     <mat-footer-row *matFooterRowDef="displayedColumns"></mat-footer-row>
   </mat-table>
 </div>
-
