--- a/src/app/pages/shopping-cart/shopping-cart.component.sass
+++ b/src/app/pages/shopping-cart/shopping-cart.component.sass
@@ -19,6 +19,12 @@
   margin-top: 4px
   margin-bottom: 4px
 
+.cdk-column-name
+  flex: 1 0 10%
+
+.cdk-column-category
+  flex: 0 1 10%
+
 .cdk-column-price
   flex: 1 1 50px
 
@@ -26,7 +32,7 @@
   flex: 0 1 200px
 
 .cdk-column-total
-  flex: 0 1 50px
+  flex: 0 1 60px
 
 .content-width
   max-width: 800px
