--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -7,7 +7,7 @@
     color="warn"
     type="button"
     [disabled]="totalCount === 0"
-    (click)="onDeleteShoppingCart()"
+    (click)="onConfirmDelete()"
   >
     <mat-icon>delete</mat-icon> Delete
   </button>
