Display dateCreated of Shopping Cart

--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,9 @@
 <h1>Shopping Cart</h1>
 
 <mat-toolbar class="transparent content-width">
+  <span *ngIf="shoppingCart$ | async as cart">
+    {{ cart.dateCreated | date }}
+  </span>
   <span class="filling-spacer"></span>
   <button
     mat-button
