--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="mat-typography">
   <h1>The Organic Shop</h1>
-  <p>This is a programming example for my first steps in Angular 14. It is based on the final tutorial project of the course <i>Angular 4: Beginner to Pro</i> created by <a mat-button class="mat-primary app-link" href="https://codewithmosh.com" target="_blank">Mosh Hamedani</a>.</p>
+  <p>This is a programming example for my first steps in Angular 14. It is based on the final tutorial project of the course <i>Angular 4: Beginner to Pro</i> created by <a mat-button class="mat-accent app-link" href="https://codewithmosh.com" target="_blank">Mosh Hamedani</a>.</p>
 </div>
 
 
