--- a/src/app/pages/shopping-cart/shopping-cart.component.sass
+++ b/src/app/pages/shopping-cart/shopping-cart.component.sass
@@ -34,5 +34,6 @@
 .cdk-column-total
   flex: 0 1 60px
 
-.content-width
-  max-width: 800px
+.cdk-footer-cell
+  border-top: 1px solid
+  font-weight: 500
