--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -12,7 +12,7 @@
     [disabled]="totalQuantity === 0"
     (click)="onConfirmDelete()"
   >
-    <mat-icon>delete</mat-icon> Delete
+    <mat-icon>subtitles_off</mat-icon> Clear
   </button>
 </mat-toolbar>
 
