--- a/src/app/pages/my/order-success/order-success.component.html
+++ b/src/app/pages/my/order-success/order-success.component.html
@@ -1,1 +1,13 @@
-<p>order-success works!</p>
+  <div *ngIf="order as order; else noOrder">
+    <h1>Order successfull</h1>
+
+    <p>
+      This order has been placed successfully.
+    </p>
+    <app-order-card [order]="order"></app-order-card>
+  </div>
+  <ng-template #noOrder>
+    <h1>No such order</h1>
+
+    <p>No order found.</p>
+  </ng-template>
