Theming and icons

--- a/src/app/app-components/toolbar/toolbar.component.html
+++ b/src/app/app-components/toolbar/toolbar.component.html
@@ -5,7 +5,7 @@
     class="top-toolbar-brand"
     routerLink="/"
     ariaCurrentWhenActive="page"
-    >Organic Shop</a
+    ><mat-icon>store</mat-icon> Organic Shop </a
   >
   <button
     mat-button
