--- a/src/app/app-components/product-cart-button/product-cart-button.component.html
+++ b/src/app/app-components/product-cart-button/product-cart-button.component.html
@@ -1,9 +1,16 @@
-<div *ngIf="productCount !== null && productCount > 0; else initialButton" class="button-block">
-  <button mat-flat-button color="accent" (click)="dec()" class="dec-button">-</button>
+<div
+  *ngIf="productCount !== null && productCount > 0; else initialButton"
+  class="button-block"
+>
+  <button mat-flat-button color="accent" (click)="dec()" class="dec-button">
+    -
+  </button>
   <div class="amount">
     <span> {{ productCount }} in cart </span>
   </div>
-  <button mat-flat-button color="accent" (click)="inc()" class="inc-button">+</button>
+  <button mat-flat-button color="accent" (click)="inc()" class="inc-button">
+    +
+  </button>
 </div>
 <ng-template #initialButton>
   <button mat-flat-button color="accent" type="button" (click)="inc()">
