--- a/src/app/pages/my/check-out/check-out.component.html
+++ b/src/app/pages/my/check-out/check-out.component.html
@@ -123,7 +123,7 @@
       mat-flat-button
       color="primary"
       type="submit"
-      [disabled]="form.invalid || !shoppingCartProducts"
+      [disabled]="form.invalid || !shoppingCart"
     >
       <mat-icon>output</mat-icon> Order
     </button>
