Orders as table

--- a/src/app/pages/my/order-success/order-success.component.html
+++ b/src/app/pages/my/order-success/order-success.component.html
@@ -4,7 +4,7 @@
     <p>
       This order has been placed successfully.
     </p>
-    <app-order-card [order]="order"></app-order-card>
+    <app-orders-table [orders]="[order]"></app-orders-table>
   </div>
   <ng-template #noOrder>
     <h1>No such order</h1>
