--- a/src/app/pages/admin/admin-orders/admin-orders.component.html
+++ b/src/app/pages/admin/admin-orders/admin-orders.component.html
@@ -1,2 +1,3 @@
 <h1>Orders</h1>
-<app-order-card *ngFor="let order of orders$ | async" [order]="order"></app-order-card>
+<app-orders-table [orders]="orders$ | async"></app-orders-table>
+
