--- a/src/app/pages/admin/admin-products/admin-products.component.html
+++ b/src/app/pages/admin/admin-products/admin-products.component.html
@@ -69,7 +69,7 @@
 
   <mat-paginator
     [pageSizeOptions]="[5, 10, 25, 100]"
-    aria-label="Select page of users"
+    aria-label="Select page"
   ></mat-paginator>
 </div>
 
