--- a/src/app/pages/my/user-orders/user-orders.component.html
+++ b/src/app/pages/my/user-orders/user-orders.component.html
@@ -1,2 +1,2 @@
 <h1>My orders</h1>
-<app-order-card *ngFor="let order of orders$ | async" [order]="order"></app-order-card>
+<app-orders-table [orders]="orders$ | async"></app-orders-table>
