--- a/src/app/app-components/orders-table/orders-table.component.sass
+++ b/src/app/app-components/orders-table/orders-table.component.sass
@@ -4,6 +4,12 @@
   padding-top: 6px
   padding-bottom: 6px
 
+.mat-cell:not(:last-of-type)
+  padding-right: 6px
+
+.mat-header-cell:not(:last-of-type)
+  padding-right: 6px
+
 .mat-column-totalPrice
   justify-content: right
   flex: 0 1 10%
